--- a/redocly.yaml
+++ b/redocly.yaml
@@ -1,7 +1,10 @@
-# See https://redocly.com/docs/cli/configuration/ for more information.
 apis:
-  sample@v1: 
-    root: openapi/openapi.yaml
+  berichtstatusPull@v2: 
+    root: openapi/VSP-Koppeling_Berichtstatus_REST_Pull_V2_-_2.1.0.json
+  berichtuitwisselingPush@v1: 
+    root: openapi/VSP-Koppeling_Berichtuitwisseling_REST_Push_V1_-_1.0.0.json
+  berichtuitwisselingPull@v1: 
+    root: openapi/VSP-Koppeling_Berichtuitwisseling_REST_Pull_V1_-_1.0.0.json
 extends:
   - recommended
 rules:
@@ -15,9 +18,9 @@ theme:
         primary:
           main: "#32329f"
     generateCodeSamples:
-      languages:  # Array of language config objects; indicates in which languages to generate code samples.
+      languages: 
+        - lang: C#
         - lang: curl
         - lang: Node.js
-        - lang: JavaScript
         - lang: PHP
         - lang: Python
