--- a/.github/workflows/build-nuget.yml
+++ b/.github/workflows/build-nuget.yml
@@ -19,6 +19,6 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore sdk\VecozoSdk.sln
     - name: Build
       run: dotnet build sdk\VecozoSdk.sln --no-restore
