--- a/.github/workflows/pack-and-release-nuget-package.yml
+++ b/.github/workflows/pack-and-release-nuget-package.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore ./sdk/VecozoSdk.sln --configuration Release 
+      run: dotnet restore ./sdk/VecozoSdk.sln
     - name: Build
       run: dotnet build ./sdk/VecozoSdk.sln --configuration Release --no-restore
     - name: Package
