--- a/.github/workflows/pack-and-release-nuget-package.yml
+++ b/.github/workflows/pack-and-release-nuget-package.yml
@@ -13,7 +13,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0     
+    - name: Install GitVersion
+      uses: gittools/actions/gitversion/setup@v3.0.0
+      with:
+        versionSpec: '6.x'
+    - name: Determine Version
+      uses: gittools/actions/gitversion/execute@v3.0.0
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
@@ -23,4 +32,4 @@ jobs:
     - name: Build
       run: dotnet build ./sdk/VecozoSdk.sln --configuration Release --no-restore
     - name: Package
-      run: dotnet pack ./sdk/VecozoSdk.sln --configuration Release
+      run: dotnet pack ./sdk/VecozoSdk.sln --configuration Release /p:Version='${{ env.GitVersion_SemVer }}'
