Alle VSP-Koppeling OpenAPI's toegevoegd

--- a/sdk/VspKoppelingSdk.Sample/VspKoppelingSdk.Sample.csproj
+++ b/sdk/VspKoppelingSdk.Sample/VspKoppelingSdk.Sample.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BerichtuitwisselingSdk\BerichtuitwisselingSdk.csproj" />
+    <ProjectReference Include="..\VspKoppelingSdk\VspKoppelingSdk.csproj" />
   </ItemGroup>
 
 </Project>
