--- a/.github/workflows/pack-and-release-nuget-package.yml
+++ b/.github/workflows/pack-and-release-nuget-package.yml
@@ -1,10 +1,6 @@
-name: Validate NuGet package
+name: Pack & release NuGet package
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
@@ -33,3 +29,5 @@ jobs:
       run: dotnet build ./sdk/VecozoSdk.sln --configuration Release --no-restore
     - name: Package
       run: dotnet pack ./sdk/VspKoppelingSdk/VspKoppelingSdk.csproj --configuration Release --output artifacts /p:Version='${{ env.GitVersion_SemVer }}'
+    - name: Publish
+      run: dotnet nuget push "artifacts/*.nupkg" --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
