--- a/sdk/VspKoppelingSdk.Sample/VspKoppelingSdk.Sample.csproj
+++ b/sdk/VspKoppelingSdk.Sample/VspKoppelingSdk.Sample.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BerichtuitwisselingSdk\BerichtuitwisselingSdk.csproj" />
+    <ProjectReference Include="..\VspKoppelingSdk\VspKoppelingSdk.csproj" />
   </ItemGroup>
 
 </Project>
